--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,6 +1,6 @@
-<site-notes></site-notes>
+<!--<site-notes></site-notes>-->
 <simple-summary-stats></simple-summary-stats>
-<!-- summary-stats></summary-stats -->
+ <!--<summary-stats></summary-stats>-->
 
 <div class="row">
     <div class="col-md-6 col-sm-6">
@@ -28,8 +28,7 @@
                                 <i class="fa fa-hourglass-o"></i>{{t.timestamp | timeDuration }} ago</span>
                         </div>
                         <div class="todo-tasklist-controls col-sm-7">
-                            <div class="todo-tasklist-item-text"><a href="/addr/{{t.miner}}">{{t.extraData}}</a><br>
-                            by <a href="/addr/{{t.miner}}">{{t.miner}}</a><br>
+                            <div class="todo-tasklist-item-text">Signer by <a href="/addr/{{t.miner}}">{{t.minerName?t.minerName:t.miner}}</a><br>
                             {{t.txn}} txns
                             </div>
                         </div>
@@ -75,4 +74,3 @@
         <!-- END PORTLET-->
     </div>
 </div>
-
