--- a/public/views/token.html
+++ b/public/views/token.html
@@ -9,7 +9,7 @@
                   {{ token.balance | number: 10 }} </span><br>
                 <span class="eth-stat-text">
                   {{ token.name }} Address Balance ({{ settings.symbol }})
-                  </span><br> 
+                  </span><br>
                   <div class="margin-top-20">
                   {{ token.total_supply | number:1 }} <span class="eth-stat-text">Total {{ token.symbol }} Tokens</span>
                   </div>
@@ -29,12 +29,12 @@
                     <span class='btn blue-madison' ng-show="!isFollowing(token.ash)" ng-click="follow(token.ash)">WATCH <i class="fa fa-rss "></i></span>
                     <span class='btn grey'  ng-show="isFollowing(token.ash)" ng-click="unFollow(token.ash)">WATCHING <i class="fa fa-check "></i></span>
                     <div class="margin-top-20">
-                        {{ token.follow_count }}0 
+                        {{ token.follow_count }}0
                         <span class="eth-stat-text">WATCHING</span>
                     </div>
                     <div class="margin-top-20">
                        <span class="eth-stat-text">Contract Creator</span><br>
-                       <a href="/addr/{{token.creator}}">{{token.creator.substr(0,24)}}...</a> at txn 
+                       <a href="/addr/{{token.creator}}">{{token.creator.substr(0,24)}}...</a> at txn
                        <a href="/tx/{{token.transaction}}">{{token.transaction.substr(0,24)}}...</a>
                     </div>
                     <div class="margin-top-20">
@@ -53,7 +53,7 @@
   <!-- Begin: Transaction Datatable -->
   <div class="portlet light col-md-12">
      <div class="portlet-body">
-       
+
        <div class="tabbable-line">
           <ul class="nav nav-tabs ">
               <li ng-class="{active: activeTab == 'tab_token_1' || !activeTab}">
@@ -64,10 +64,10 @@
               </li>
               <li ng-class="{active: activeTab == 'tab_token_3'}">
                   <a href="#tab_token_3" data-toggle="tab" aria-expanded="true"> Contract Transactions </a>
-              </li>              
+              </li>
               <li ng-class="{active: activeTab == 'tab_token_4'}">
                   <a href="#tab_token_4" data-toggle="tab" aria-expanded="false"> Contract Source </a>
-              </li>              
+              </li>
           </ul>
           <div class="tab-content">
             <div class="tab-pane" ng-class="{active: activeTab == 'tab_token_1' || !activeTab}" id="tab_token_1">
@@ -86,7 +86,7 @@
                 </div><!--end row-->
                 <div class="row" ng-show="showTokens"><!-- balance results -->
                   <div class="col-md-10">
-                    <h4>You have <span class="eth-stat-title font-blue-madison">0{{userTokens | number}}</span> {{ token.symbol }}  tokens.</h4>
+                    <h4>You have <span class="eth-stat-title font-blue-madison">0{{userTokens | number}}</span> {{ token.symbol }}  tokens at {{form.lastInput}}.</h4>
                   </div>
                 </div>
             </div><!-- end get Token Balance Tab -->
@@ -94,26 +94,39 @@
               <transfer-tokens></transfer-tokens>
             </div><!-- end Internal txs Tab -->
             <div class="tab-pane table-container" ng-class="{active: activeTab == 'tab_token_3'}" id="tab_token_3"><!-- Datatable tab -->
-
+              <span>Latest 20 txns From a total of <a href="/addr/{{token.address}}">{{token.count}} Transactions</a></span>
               <table class="table table-striped table-hover" id="table_txs" style="table-layout:fixed;width: 98% !important;">
                   <thead>
                       <tr role="row" class="heading">
                           <th width="15%"> TxHash </th>
-                          <th width="8%"> Block </th>
-                          <th width="15%"> From </th>
-                          <th width="15%"> To </th>
-                          <th width="10%"> {{ settings.symbol }} </th>
-                          <th width="0%"> gas </th>
-                          <th width="12%"> Age </th>
+                          <!--<th width="8%"> Block </th>-->
+                          <th width="12%"> From </th>
+                          <th width="0%"> Params </th>
+                          <!--<th width="10%"> {{ settings.symbol }} </th>-->
+                          <th width="8%"> gas </th>
+                          <th width="15%" > Age </th>
+                          <th width="10%" > Type </th>
                       </tr>
                   </thead>
-                  <tbody></tbody>
+                  <tbody>
+                      <tr ng-repeat="t in latest_transactions">
+                          <td class="truncate-txhash"> <a href="/tx/{{t.txHash}}">{{t.txHash}}</a> </td>
+                          <!--<td style="text-align:center"><a href="/block/{{t.blockHash}}">{{t.blockHash}}</a>-->
+                          <td class="truncate-addrhash"> <a href="/addr/{{t.from}}">{{t.from}}</a> </td>
+                          <td style="white-space: pre-line;word-break: break-all;text-overflow: unset;"> {{t.params}} </td>
+                          <!--<td> {{t.amount}} </td>-->
+                          <td> {{t.gas}} </td>
+                          <td><span class="date"> {{t.timestamp | timeDuration}}</span></td>
+                          <td style="text-align:center"><span class="label label-sm label-info"> {{t.type}} </span>
+                              <span class="label label-sm label-danger" ng-show="t.error"> {{t.error}}</span></td>
+                      </tr>
+                  </tbody>
               </table>
             </div><!-- End: Datatable tab -->
 
             <div class="tab-pane" id="tab_token_4" ng-class="{active: activeTab == 'tab_token_4'}">
               <contract-source></contract-source>
-            </div>            
+            </div>
         </div><!-- end tab content -->
       </div>
     </div><!-- End: portlet -->
