--- a/public/views/transfer-tokens.html
+++ b/public/views/transfer-tokens.html
@@ -14,22 +14,22 @@
         </thead>
         <tbody>
             <tr ng-repeat="t in transfer_tokens track by $index">
-                <td class="truncate-txhash"> <a href="/tx/{{t.transactionHash}}">{{t.transactionHash}}</a> </td>
+                <td class="truncate-txhash"> <a href="/tx/{{t.txHash}}">{{t.txHash}}</a> </td>
                 <td>{{t.timestamp | timeDuration}} ago</td>
                 <td> <a href="/block/{{t.blockNumber}}">{{t.blockNumber}}</a> </td>
                 <td class="truncate-addrhash"> <a href="/addr/{{t.from}}">{{t.from}}</a> </td>
                 <td class="truncate-addrhash"> <a href="/addr/{{t.to}}">{{t.to}}</a> </td>
                 <td style="text-align:right"> {{t.amount | number}} </td>
-                <td style="text-align:center"><span class="label label-sm label-info"> Transfer </span></td>
+                <!--<td style="text-align:center"><span class="label label-sm label-info"> Transfer </span></td>-->
             </tr>
         </tbody>
     </table>
     <ul class="pager">
-        <li class="previous">
-            <a ng-click="getTransferTokens(transfer_tokens[0]._id)"> ← Newer </a>
+        <li class="previous" ng-show="{{transferStart==0}}">
+            <a ng-click="getTransferTokens(false)"> ← Newer </a>
         </li>
-        <li class="next">
-            <a ng-click="getTransferTokens(transfer_tokens[transfer_tokens.length-1]._id)"> Older → </a>
+        <li class="next" ng-show="{{transferCount > (transferStart + 20)}}">
+            <a ng-click="getTransferTokens(true)"> Older → </a>
         </li>
     </ul>
 </div>
