--- a/public/views/address.html
+++ b/public/views/address.html
@@ -26,19 +26,19 @@
               </div>
             </div>
 
-            <div class="col-md-6 center">
-                <div class="portlet">
-                  <div class="portlet-body">
+            <!--<div class="col-md-6 center">-->
+                <!--<div class="portlet">-->
+                  <!--<div class="portlet-body">-->
 
-                    <span class='btn blue-madison' ng-show="!isFollowing(addrHash)" ng-click="follow(addrHash)">WATCH <i class="fa fa-rss "></i></span>
-                    <span class='btn grey'  ng-show="isFollowing(addrHash)" ng-click="unFollow(addrHash)">WATCHING <i class="fa fa-check "></i></span>
-                    <div class="margin-top-20">
-                        {{ addr.follow_count }}0 
-                        <span class="eth-stat-text">WATCHING</span>
-                    </div>
-                </div>
-              </div>
-            </div>
+                    <!--<span class='btn blue-madison' ng-show="!isFollowing(addrHash)" ng-click="follow(addrHash)">WATCH <i class="fa fa-rss "></i></span>-->
+                    <!--<span class='btn grey'  ng-show="isFollowing(addrHash)" ng-click="unFollow(addrHash)">WATCHING <i class="fa fa-check "></i></span>-->
+                    <!--<div class="margin-top-20">-->
+                        <!--{{ addr.follow_count }}0 -->
+                        <!--<span class="eth-stat-text">WATCHING</span>-->
+                    <!--</div>-->
+                <!--</div>-->
+              <!--</div>-->
+            <!--</div>-->
 
       </div><!--end row-->
     </div><!--end portlet-body-->
