--- a/public/views/token.html
+++ b/public/views/token.html
@@ -86,7 +86,9 @@
                 </div><!--end row-->
                 <div class="row" ng-show="showTokens"><!-- balance results -->
                   <div class="col-md-10">
-                    <h4>You have <span class="eth-stat-title font-blue-madison">0{{userTokens | number}}</span> {{ token.symbol }}  tokens at {{form.lastInput}}.</h4>
+                    <h4>You have <span class="eth-stat-title font-blue-madison">{{userTokens | number}}</span> {{ token.symbol }}  tokens
+                        <!--<small ng-show="userTokens.length > 12"> (={{}}) </small>-->
+                        <br> at <a href="/addr/{{form.lastInput}}">{{form.lastInput}}</a>.</h4>
                   </div>
                 </div>
             </div><!-- end get Token Balance Tab -->
