--- a/public/views/address.html
+++ b/public/views/address.html
@@ -96,7 +96,7 @@
                         <td style="text-align:right"><a href="/block/{{t.blockNumber}}">{{t.blockNumber}}</a>
                         <td class="truncate-addrhash"> <a href="/addr/{{t.from}}">{{t.from}}</a> </td>
                         <td class="truncate-addrhash"> <a href="/addr/{{t.to}}">{{t.to}}</a> </td>
-                        <td style="text-align:right"> {{t.value}} </td>
+                        <td style="text-align:right"> {{t.value | valuePrecision}} </td>
                         <td style="text-align:right"> {{t.gas}} </td>
                         <td style="text-align:center"><span class="label label-sm label-info {{t.type}}"> {{t.type}}</span><span class="label label-sm label-danger" ng-show="t.error"> {{t.error}}</span></td>
                     </tr>
