--- a/public/views/transfer-tokens.html
+++ b/public/views/transfer-tokens.html
@@ -19,7 +19,7 @@
                 <td> <a href="/block/{{t.blockNumber}}">{{t.blockNumber}}</a> </td>
                 <td class="truncate-addrhash"> <a href="/addr/{{t.from}}">{{t.from}}</a> </td>
                 <td class="truncate-addrhash"> <a href="/addr/{{t.to}}">{{t.to}}</a> </td>
-                <td style="text-align:right"> {{t.amount | number}} </td>
+                <td style="text-align:right"> {{t.amount | valuePrecision}} </td>
                 <!--<td style="text-align:center"><span class="label label-sm label-info"> Transfer </span></td>-->
             </tr>
         </tbody>
