--- a/public/views/address.html
+++ b/public/views/address.html
@@ -52,17 +52,17 @@
               <li ng-class="{active: activeTab == 'tab_addr_1' || !activeTab}">
                   <a href="#tab_addr_1" data-toggle="tab" aria-expanded="true"> Transactions </a>
               </li>
-              <li  ng-class="{active: activeTab == 'tab_addr_2'}" ng-show="addr.isContract">
-                  <a href="#tab_addr_2" data-toggle="tab" aria-expanded="false"> Internal Transactions </a>
+              <li  ng-class="{active: activeTab == 'tab_addr_2'}">
+                  <a href="#tab_addr_2" data-toggle="tab" aria-expanded="false"> Token Txns </a>
               </li>
               <li class="" ng-show="addr.isContract" ng-class="{active: activeTab == 'tab_addr_3'}">
                   <a href="#tab_addr_3" data-toggle="tab" aria-expanded="false"> Contract Source </a>
               </li>
           </ul>
           <div class="tab-content">
-            <div class="tab-pane table-container" ng-class="{active: activeTab == 'tab_addr_1' || !activeTab}" id="tab_addr_1"><!-- Datatable tab -->
-
-              <table class="table table-striped table-hover" id="table_txs" style="table-layout:fixed;width: 98% !important;">
+              <div class="tab-pane table-container" ng-class="{active: activeTab == 'tab_addr_1' || !activeTab}" id="tab_addr_1"><!-- Datatable tab -->
+                   <p><input title="hidden-zero" type="checkbox" ng-model="hiddenZeroTxns" ng-change="hiddenZeroChange()" /> Hidden Zero Value Transactions</p>
+                  <table class="table table-striped table-hover" id="table_txs" style="table-layout:fixed;width: 98% !important;">
                   <thead>
                       <tr role="row" class="heading">
                           <th width="15%"> TxHash </th>
@@ -77,30 +77,20 @@
                   <tbody></tbody>
               </table>
             </div><!-- End: Datatable tab -->
-            <div class="tab-pane" id="tab_addr_2" ng-show="addr.isContract" ng-class="{active: activeTab == 'tab_addr_2'}">
-              <table class="table table-condensed" ng-show="addr.isContract">
+            <div class="tab-pane" id="tab_addr_2" ng-class="{active: activeTab == 'tab_addr_2'}">
+              <table class="table" id="table_internal_txs" style="table-layout:fixed;width: 98% !important;">
                 <thead>
-                    <tr>
+                    <tr role="row" class="heading">
                         <th width="15%"> TxHash </th>
                         <th width="8%"> Block </th>
                         <th width="15%"> From </th>
                         <th width="15%"> To </th>
-                        <th width="10%"> {{ settings.symbol }} </th>
+                        <th width="10%"> Value </th>
                         <th width="0%"> gas </th>
-                        <th></th>
+                        <th width="12%"> Age </th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr ng-repeat="t in internal_transactions track by $index">
-                        <td class="truncate-txhash"> <a href="/tx/{{t.transactionHash}}">{{t.transactionHash}}</a> </td>
-                        <td style="text-align:right"><a href="/block/{{t.blockNumber}}">{{t.blockNumber}}</a>
-                        <td class="truncate-addrhash"> <a href="/addr/{{t.from}}">{{t.from}}</a> </td>
-                        <td class="truncate-addrhash"> <a href="/addr/{{t.to}}">{{t.to}}</a> </td>
-                        <td style="text-align:right"> {{t.value | valuePrecision}} </td>
-                        <td style="text-align:right"> {{t.gas}} </td>
-                        <td style="text-align:center"><span class="label label-sm label-info {{t.type}}"> {{t.type}}</span><span class="label label-sm label-danger" ng-show="t.error"> {{t.error}}</span></td>
-                    </tr>
-                </tbody>
+                <tbody></tbody>
               </table>
             </div>
             <div class="tab-pane" id="tab_addr_3" ng-show="addr.isContract" ng-class="{active: activeTab == 'tab_addr_3'}">
