--- a/public/views/address.html
+++ b/public/views/address.html
@@ -52,7 +52,7 @@
               <li ng-class="{active: activeTab == 'tab_addr_1' || !activeTab}">
                   <a href="#tab_addr_1" data-toggle="tab" aria-expanded="true"> Transactions </a>
               </li>
-              <li  ng-class="{active: activeTab == 'tab_addr_2'}">
+              <li  ng-class="{active: activeTab == 'tab_addr_2'}" ng-show="addr.isContract" >
                   <a href="#tab_addr_2" data-toggle="tab" aria-expanded="false"> Token Txns </a>
               </li>
               <li class="" ng-show="addr.isContract" ng-class="{active: activeTab == 'tab_addr_3'}">
@@ -61,7 +61,7 @@
           </ul>
           <div class="tab-content">
               <div class="tab-pane table-container" ng-class="{active: activeTab == 'tab_addr_1' || !activeTab}" id="tab_addr_1"><!-- Datatable tab -->
-                   <p><input title="hidden-zero" type="checkbox" ng-model="hiddenZeroTxns" ng-change="hiddenZeroChange()" /> Hidden Zero Value Transactions</p>
+                   <p><input title="hidden-zero" type="checkbox" ng-model="hiddenZeroTxns" ng-change="hiddenZeroChange()" /> Hidden Token Transactions</p>
                   <table class="table table-striped table-hover" id="table_txs" style="table-layout:fixed;width: 98% !important;">
                   <thead>
                       <tr role="row" class="heading">
